# UMAII_Fast_API

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
api/: main.py  migrate_db.py  settings.py
api/cruds/: employee.py  food.py  order.py  user.py
api/models/: employee.py  food.py  order.py  user.py
api/routers/: employee.py  food.py  order.py  user.py
api/schemas/: employee.py  food.py  order.py  token.py  user.py
